eks-config/istio/ing/dev-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-public-ing
  namespace: istio-system
  annotations:
    alb.ingress.kubernetes.io/actions.redirect-to-https: >
      {"Type":"redirect","RedirectConfig":{"Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_302"}}
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:934563315680:certificate/2d67e2d2-c8c1-4c4d-8d54-1b57d27d6b50
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:934563315680:certificate/2d65b944-5a39-4b24-8fab-7bd68dad2de3,arn:aws:acm:ap-northeast-2:934563315680:certificate/ef16248f-3679-4999-8197-37fb7368b239
    alb.ingress.kubernetes.io/group.name: aim-dev-pub-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=aim-dev-pri-public-alb-logs-s3
    alb.ingress.kubernetes.io/load-balancer-name: aim-dev-pub-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: sg-059e3dc3cca44f1e8, sg-03d0ab82fcc1b1a39, sg-0e945bc7522d1b720, sg-058c199cd82d64c72, sg-017dc4af3d4ddc529, sg-05c5505f10ddc55dc
    alb.ingress.kubernetes.io/subnets: subnet-0534c363325a886e0, subnet-0a30f371e11482136,subnet-045bec401079b7973
    alb.ingress.kubernetes.io/target-type: ip
    alb.k8s.io/ingress.group: pub-group
    kubernetes.io/ingress.class: alb

spec:
  rules:
    - host: pcw-dev.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: enpcw-dev.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: mbw-dev.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: enmbw-dev.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: ccw-dev.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: pow-dev.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: inf-dev.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: pub-fo.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: pub-mo.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-private-ing
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/subnets: subnet-0a335d3ce34930cfb, subnet-047bbd10f62cbda9d, subnet-055a3e6a8188f4eaa
    alb.ingress.kubernetes.io/group.name: aim-dev-pri-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.redirect-to-https: >
      {"Type":"redirect","RedirectConfig":{"Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_302"}}
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:934563315680:certificate/ef16248f-3679-4999-8197-37fb7368b239
    alb.ingress.kubernetes.io/security-groups: sg-0632b498cf91fbfc5, sg-03d0ab82fcc1b1a39, sg-0e945bc7522d1b720, sg-058c199cd82d64c72, sg-017dc4af3d4ddc529, sg-05c5505f10ddc55dc
    alb.ingress.kubernetes.io/target-type: ip
    alb.k8s.io/ingress.group: pri-group
    alb.ingress.kubernetes.io/load-balancer-name: aim-dev-pri-alb
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=aim-dev-pri-private-alb-logs-s3
spec:
  rules:
    - host: bow-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: ccw-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: gw-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-member-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-order-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-goods-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-display-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-event-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-common-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-bo-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: batch-mbod-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: batch-gddp-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: jaeger-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracing
                port:
                  number: 80
    - host: grafana-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: kiali-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20001
    - host: prometheus-dev.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
