eks-config/istio/ing/qa-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-private-ing-80
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: aim-qa-pri-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=aim-qa-pri-private-alb-logs-s3
    alb.ingress.kubernetes.io/load-balancer-name: aim-qa-pri-alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/security-groups: sg-088df68a2ebfc4511 , sg-0d2f72c8cd75cd110, sg-010879dd18c8f7dac, sg-0f5512d110b148f13, sg-07e83ae0f5d275953, sg-0972af6c2eba08aab
    alb.ingress.kubernetes.io/subnets: subnet-0dd41d5a5b3352f2d , subnet-043f63e8efc687b85, subnet-0ffa99f3d79f15751
    alb.ingress.kubernetes.io/target-type: ip
    alb.k8s.io/ingress.group: pri-group
    alb.ingress.kubernetes.io/conditions.redirect-to-mo: >
      [{"Field":"host-header","HostHeaderConfig":{"Values":["pcw-qa.test.com"]}},{"Field":"http-header","HttpHeaderConfig":{"HttpHeaderName":"User-Agent","Values":["*Mobi*"]}}]
    alb.ingress.kubernetes.io/actions.redirect-to-mo: >
      {"Type":"redirect","RedirectConfig":{"Host":"mbw-qa.test.com","Path":"\/#{path}","Port":"443","Protocol":"HTTPS","Query":"#{query}","StatusCode":"HTTP_301"}}

spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: redirect-to-mo
                port:
                  name: use-annotation
            path: /
            pathType: Prefix
    - host: pcw-qa.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: enpcw-qa.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: mbw-qa.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: enmbw-qa.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: ccw-qa.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: pow-qa.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: inf-qa.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-private-ing-443
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/actions.redirect-to-https: |
      {"Type":"redirect","RedirectConfig":{"Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_302"}}
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:206178055504:certificate/f554564b-9185-400a-a002-6a60d1907349
    alb.ingress.kubernetes.io/group.name: aim-qa-pri-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=aim-qa-pri-private-alb-logs-s3
    alb.ingress.kubernetes.io/load-balancer-name: aim-qa-pri-alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/security-groups: sg-088df68a2ebfc4511 , sg-0d2f72c8cd75cd110, sg-010879dd18c8f7dac, sg-0f5512d110b148f13, sg-07e83ae0f5d275953, sg-0972af6c2eba08aab
    alb.ingress.kubernetes.io/subnets: subnet-0dd41d5a5b3352f2d , subnet-043f63e8efc687b85, subnet-0ffa99f3d79f15751
    alb.ingress.kubernetes.io/target-type: ip
    alb.k8s.io/ingress.group: pri-group
spec:
  rules:
    - host: bow-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: ccw-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: gw-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-member-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-order-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-goods-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-display-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-event-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-common-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: api-bo-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: batch-mbod-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: batch-gddp-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
    - host: jaeger-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracing
                port:
                  number: 80
    - host: grafana-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: kiali-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20001
    - host: prometheus-qa.inner-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
